# DIP-Experiments

./: .gitignore  README.md  requirements.txt
canny/: .gitignore  .travis.yml  CMakeLists.txt  README.md  hello.cpp  package-lock.json  package.json
canny/.electron-vue/: build.js
canny/canny-ui/: main.js  package-lock.json  package.json
canny/cpp/: hello.cpp  image.cpp  image.h  napi.cpp  test_main.cpp
canny/nodecanny/: .gitignore  CMakeLists.txt  hello.cpp  package-lock.json  package.json
canny/opencv/cmake/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
canny/opencv/include/opencv2/: cvconfig.h
canny/src/: index.ejs
canny/src/main/: index.dev.js  index.js
canny/src/renderer/: App.vue  main.js
canny/src/renderer/components/: LandingPage.vue
canny/src/renderer/components/LandingPage/: SystemInformation.vue
histogram_eq/: README.md  gray_scale.py  histogram.txt  histogram_equal.py  histogram_match.py
huffman/: CMakeLists.txt
huffman/resource/: resources.qrc
huffman/src/: huffman.cpp  huffman.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  util.cpp  util.h
motion_degrade/: degrade.ipynb  restore.ipynb
